--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.5",
     "express": "^4.18.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
