--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.5",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
+    "promise": "^8.3.0",
     "sequelize": "^6.25.3"
   },
   "devDependencies": {
