--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.5",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "promise": "^8.3.0",
     "sequelize": "^6.25.3"
   },
